--- a/src/components/language/locales/ua/common.json
+++ b/src/components/language/locales/ua/common.json
@@ -106,7 +106,19 @@
       "socials": "Наші соціальні мережі",
       "emailField": "Ваша електронна пошта",
       "nameField": "Ваше ім'я",
-      "messageField": "Ваше повідомлення"
+      "messageField": "Ваше повідомлення",
+      "emailInput": {
+        "id": "Ваша електронна адреса",
+        "alertMessage": "Будь ласка, введіть дані. Поле електронної пошти є обов'язковим"
+      },
+      "nameInput": {
+        "id": "Ваше ім'я",
+        "alertMessage": "Будь ласка, введіть дані. Поле імені є обов'язковим"
+      },
+      "messageInput": {
+        "id": "Ваше повідомлення",
+        "alertMessage": "Будь ласка, введіть дані. Поле повідомлення є обов'язковим"
+      }
     }
   }
 }
