--- a/src/components/language/locales/ua/common.json
+++ b/src/components/language/locales/ua/common.json
@@ -104,19 +104,16 @@
       "visit": "Завітайте до нас",
       "address": "2905 West Drive, Buffalo Grove",
       "socials": "Наші соціальні мережі",
-      "emailField": "Ваша електронна пошта",
-      "nameField": "Ваше ім'я",
-      "messageField": "Ваше повідомлення",
       "emailInput": {
-        "id": "Ваша електронна адреса",
+        "placeholder": "Ваша електронна адреса",
         "alertMessage": "Будь ласка, введіть дані. Поле електронної пошти є обов'язковим"
       },
       "nameInput": {
-        "id": "Ваше ім'я",
+        "placeholder": "Ваше ім'я",
         "alertMessage": "Будь ласка, введіть дані. Поле імені є обов'язковим"
       },
       "messageInput": {
-        "id": "Ваше повідомлення",
+        "placeholder": "Ваше повідомлення",
         "alertMessage": "Будь ласка, введіть дані. Поле повідомлення є обов'язковим"
       }
     }
